GNOME Bugzilla – Bug 680540
[0.11] rtph264depay: broken picture with apple keynote RTSP stream
Last modified: 2012-07-25 09:57:16 UTC
This does not work well at all for me with playbin: gst-launch-1.0 playbin uri=rtsp://a2047.v1412b.c1412.g.vq.akamaistream.net/5/2047/1412/1_h264_350/1a1a1ae555c531960166df4dbc3095c327960d7be756b71b49aa1576e344addb3ead1a497aaedf11/8848125_1_350.mov Basically 2/3 of the picture are completely missing. A minimal rtspsrc ! depay ! decode ! xvimagesink pipeline works much better though (but still occasionally shows artefacts).
This URL might bring out the issue in a different/n easier to debug way: rtsp://a2047.v1411b.c1411.g.vq.akamaistream.net/5/2047/1411/1_h264_650/1a1a1ae454c430950065de4cbb2f94c226950c7ae655b61a48a91475e243acda3dac194879adde0f/080690210abcn_2a_650.mov Get gst_mini_object_unref: assertion `mini_object->refcount > 0' failed and gst_rtp_buffer_map: assertion `GST_IS_BUFFER (buffer)' failed with that.
Bug #680523 might be related.
fix for second issue: commit 0cb11943e5ba28ed50fb2131a5b50239bbc9dffe Author: Wim Taymans <wim.taymans@collabora.co.uk> Date: Wed Jul 25 10:08:52 2012 +0200 xqtdepay: fix buffer refcount error After pushing the buffer into the adapter, we should not let the baseclass push it out anymore. This error was introduced while porting to 0.11. See https://bugzilla.gnome.org/show_bug.cgi?id=680540
commit 3c47f584e2579abd76c3617e397417f8d8782320 Author: Wim Taymans <wim.taymans@collabora.co.uk> Date: Wed Jul 25 11:55:21 2012 +0200 avdec: require alignment=au for h264 Because we don't use a parser anymore we need to make sure that we feed the decoder with full frames. For h264, require that we are aligned on access units. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=680540