xqtdepay: fix buffer refcount error

After pushing the buffer into the adapter, we should not let the baseclass push
it out anymore. This error was introduced while porting to 0.11.

See https://bugzilla.gnome.org/show_bug.cgi?id=680540